Add new config to separate vc notif and x convert channels

--- a/sample_config.json
+++ b/sample_config.json
@@ -1,6 +1,7 @@
 {
     "channels_with_mentions": {},
     "message_channels": [],
+    "x_message_channels": [],
     "bot_token": "<YOUR BOT TOKEN HERE>",
     "guild_id": "<YOUR GUILD ID HERE (THIS IS AN INTEGER REMOVE QUOTES)>"
 }
