--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohappyeyeballs==2.4.6
 aiohttp==3.10.11
 aiosignal==1.3.1
 annotated-types==0.7.0
@@ -24,6 +25,7 @@ pluggy==1.5.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 pytest==8.3.4
+ruff==0.9.7
 sniffio==1.3.1
 tomli==2.2.1
 tqdm==4.66.5
