--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ attrs==23.1.0
 certifi==2024.8.30
 charset-normalizer==3.3.1
 colorama==0.4.6
+coverage==7.8.0
 discord.py==2.3.2
 distro==1.9.0
 exceptiongroup==1.2.2
@@ -24,7 +25,8 @@ packaging==24.2
 pluggy==1.5.0
 pydantic==2.9.2
 pydantic_core==2.23.4
-pytest==8.3.4
+pytest==8.3.5
+pytest-cov==6.1.1
 ruff==0.9.7
 sniffio==1.3.1
 tomli==2.2.1
