--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest
+        run: pytest --cov src
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
   
   ruff-check:
     runs-on: ubuntu-latest
