--- a/sample_config.json
+++ b/sample_config.json
@@ -5,6 +5,8 @@
     "bot_token": "<YOUR BOT TOKEN HERE>",
     "guild_id": "<(THIS IS AN INTEGER REMOVE QUOTES) YOUR GUILD ID HERE>",
     "gpt_channel_id": "<(THIS IS AN INTEGER REMOVE QUOTES) CHANNEL ID FOR THE GPT TO ANSWER IN>",
+    "gpt_model_code": "<YOUR GPT MODEL CODE HERE>",
+    "gpt_model_base": "<YOUR GPT MODEL BASE NAME HERE>",
     "gpt_query_char_limit": "<(THIS IS AN INTEGER REMOVE QUOTES) GPT QUERY MAX CHAR LIMIT>",
     "gpt_total_char_limit": "<(THIS IS AN INTEGER REMOVE QUOTES) GPT TOTAL QUERY AND RESPONSE CHAR LIMIT FOR AN HOUR>"
 }
