Switch to responses api instead of chat completion

--- a/sample_config.json
+++ b/sample_config.json
@@ -7,6 +7,6 @@
     "gpt_channel_id": "<(THIS IS AN INTEGER REMOVE QUOTES) CHANNEL ID FOR THE GPT TO ANSWER IN>",
     "gpt_model_code": "<YOUR GPT MODEL CODE HERE>",
     "gpt_model_base": "<YOUR GPT MODEL BASE NAME HERE>",
-    "gpt_query_char_limit": "<(THIS IS AN INTEGER REMOVE QUOTES) GPT QUERY MAX CHAR LIMIT>",
-    "gpt_total_char_limit": "<(THIS IS AN INTEGER REMOVE QUOTES) GPT TOTAL QUERY AND RESPONSE CHAR LIMIT FOR AN HOUR>"
+    "gpt_query_token_limit": "<(THIS IS AN INTEGER REMOVE QUOTES) GPT QUERY MAX TOKEN LIMIT>",
+    "gpt_total_token_limit": "<(THIS IS AN INTEGER REMOVE QUOTES) GPT TOTAL QUERY AND RESPONSE TOKEN LIMIT FOR AN HOUR>"
 }
